bitcoin.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: bitcoin 
  labels: 
    role: deployment

spec:
  replicas: 1
  
  selector:
    matchLabels:
      app: bitcoin 

  template:
    metadata:
      labels:
        app: bitcoin 
    spec:
      containers: 
      # The First Container
      - name: bitcoin 
        image: maryamwahbi/python-flask-ci
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: bitcoin 
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: bitcoin
