ynet.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ynet 
  labels: 
    role: deployment

spec:
  replicas: 1
  
  selector:
    matchLabels:
      app: ynet

  template:
    metadata:
      labels:
        app: ynet
    spec:
      containers: 
      # The First Container
      - name: ynet
        image: maryamwahbi/ynet
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: ynet
spec:
  type: ClusterIP
  ports:
  - port: 8081
  selector:
    app: ynet
